# Grupo5_shop-telegram-bot

./: .env.example  README.md  pyproject.toml
src/: bot.py  config.py
src/handlers/: __init__.py  help_handler.py  start_handler.py
src/handlers/commands/: help_handler.py  start_handler.py  status_handler.py  support_handler.py
src/handlers/listeners/: cart_handler.py  catalog_handler.py  checkout_handler.py  inline_query_handler.py  message_handler.py
src/utils/: __init__.py  cart_utils.py  fetching_utils.py
